# bazel-rust-cross

./: BUILD.bazel  Cargo.toml  README.md  WORKSPACE.bazel  cargo-bazel-lock.json
src/: main.rs
