[package]
name = "bazel-rust-cross"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webauthn-authenticator-rs = { git = "https://github.com/kanidm/webauthn-rs", features = ["u2fhid", "usb"], rev = "e9ebff3123263073c3668228fa088f007f3fa555" }
